--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.
-  
-    Just testing some things.
-    As you were.
+    <p>Just testing some things.</p>
+   <p> As you were.
     </p>
   </body>
 </html>
